; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/jansson/test/suites/api/extr_test_memory_funcs.c_create_and_free_object_with_oom.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/jansson/test/suites/api/extr_test_memory_funcs.c_create_and_free_object_with_oom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @create_and_free_object_with_oom to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_and_free_object_with_oom() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [4 x i8], align 1
  %3 = alloca i32*, align 8
  %4 = call i32* (...) @json_object()
  store i32* %4, i32** %3, align 8
  store i32 0, i32* %1, align 4
  br label %5

5:                                                ; preds = %17, %0
  %6 = load i32, i32* %1, align 4
  %7 = icmp slt i32 %6, 10
  br i1 %7, label %8, label %20

8:                                                ; preds = %5
  %9 = getelementptr inbounds [4 x i8], [4 x i8]* %2, i64 0, i64 0
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @snprintf(i8* %9, i32 4, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32*, i32** %3, align 8
  %13 = getelementptr inbounds [4 x i8], [4 x i8]* %2, i64 0, i64 0
  %14 = load i32, i32* %1, align 4
  %15 = call i32 @json_integer(i32 %14)
  %16 = call i32 @json_object_set_new(i32* %12, i8* %13, i32 %15)
  br label %17

17:                                               ; preds = %8
  %18 = load i32, i32* %1, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %1, align 4
  br label %5

20:                                               ; preds = %5
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @json_decref(i32* %21)
  ret void
}

declare dso_local i32* @json_object(...) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @json_object_set_new(i32*, i8*, i32) #1

declare dso_local i32 @json_integer(i32) #1

declare dso_local i32 @json_decref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
